# vkv-ccs-scripts

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pylintrc  pyproject.toml
.github/workflows/: ccs_scripts.yml  codecov.yml  quick_test.yml
docs/scripts/: co2_containment.rst  co2_csv_arrow_converter.rst  co2_mass_maps.rst  co2_plume.rst  co2_plume_area.rst  co2_plume_extent.rst
src/ccs_scripts/: __init__.py
src/ccs_scripts/aggregate/: _co2_mass.py  _config.py  _grid_aggregation.py  _migration_time.py  _parser.py  _utils.py  co2_mass_map.py  co2_mass_maps.py  grid3d_aggregate_map.py  grid3d_co2_mass_map.py  grid3d_migration_time.py
src/ccs_scripts/co2_containment/: calculate.py  co2_calculation.py  co2_containment.py
src/ccs_scripts/co2_csv_arrow_converter/: co2_csv_arrow_converter.py  converter.py
src/ccs_scripts/co2_mass_maps/: _co2_mass.py  _parser.py  co2_mass_maps.py
src/ccs_scripts/co2_plume/: plume_area.py  plume_extent.py
src/ccs_scripts/co2_plume_area/: co2_plume_area.py
src/ccs_scripts/co2_plume_extent/: co2_plume_extent.py
src/ccs_scripts/co2_plume_tracking/: co2_plume_tracking.py  utils.py
src/ccs_scripts/config_jobs/: CO2_CONTAINMENT  CO2_CSV_ARROW_CONVERTER  CO2_MASS_MAP  CO2_MASS_MAPS  CO2_PLUME_AREA  CO2_PLUME_EXTENT  GRID3D_AGGREGATE_MAP  GRID3D_CO2_MASS_MAP  GRID3D_MIGRATION_TIME  PLUME_AREA  PLUME_EXTENT
src/ccs_scripts/csv_arrow_converter/: converter.py
src/ccs_scripts/hook_implementations/: forward_model_steps.py  jobs.py
src/ccs_scripts/utils/: timer.py  utils.py
tests/: test_aggregate_maps.py  test_co2_calculate.py  test_co2_containment.py  test_co2_csv_arrow_converter.py  test_co2_mass_maps.py  test_co2_plume_area.py  test_co2_plume_extent.py  test_csv_arrow_converter.py  test_hook_implementations.py  test_migration_time_maps.py
tests/answers/containment/: plume_actual_volume_eclipse.csv  plume_actual_volume_pflotran.csv  plume_actual_volume_pflotran_residual_trapping.csv  plume_cell_volume_eclipse.csv  plume_cell_volume_pflotran.csv  plume_mass_eclipse.csv  plume_mass_eclipse_no_regions.csv  plume_mass_eclipse_no_zones.csv  plume_mass_eclipse_no_zones_no_regions.csv  plume_mass_pflotran.csv  plume_mass_pflotran_residual_trapping.csv
tests/answers/plume_area/: plume_area_eclipse.csv  plume_area_pflotran.csv
tests/answers/plume_extent/: plume_extent_eclipse.csv  plume_extent_eclipse_small_thresholds.csv  plume_extent_pflotran.csv  plume_extent_pflotran_default_thresholds.csv  plume_extent_pflotran_yaml_file.csv  plume_extent_pflotran_yaml_file_plume_tracking.csv
tests/testdata_co2_plume/mass.csv/: plume_mass.csv
tests/testdata_co2_plume/surfaces_synthetic_case_eclipse/: all--max_sgas--20310101.gri  all--max_sgas--20330101.gri  all--max_sgas--22250101.gri  all--max_sgas--22500101.gri  all--max_sgas--23000101.gri  all--max_sgas--23500101.gri  all--max_sgas--24000101.gri  all--max_sgas--24500101.gri  all--max_sgas--25000101.gri  all--max_xmf2--20270101.gri  all--max_xmf2--20310101.gri  all--max_xmf2--20330101.gri  all--max_xmf2--22250101.gri  (+60 more)
tests/testdata_co2_tables/: plume_mass.csv
tests/yaml/: config_aggregate1.yml  config_aggregate2.yml  config_aggregate3.yml  config_aggregate4.yml  config_aggregate5.yml  config_aggregate6.yml  config_aggregate7.yml  config_co2_mass_map_reek.yml  config_co2_mass_maps_pflotran.yml  config_co2_plume_extent.yml  config_co2_plume_extent_plume_tracking.yml  config_migration_time1.yml  config_migration_time2.yml
(+261 files in other folders)
